sudah buat signup dan sudah di encrypt

--- a/views/partial/head.ejs
+++ b/views/partial/head.ejs
@@ -12,7 +12,8 @@
   <header>
     <a href="/">Home</a> ||
     <a href="/list">List</a> ||
-    <a href="/profile">Profile</a>
+    <a href="/profile">Profile</a> ||
+    <a href="/logout">Logout</a>
     <h2><%= header %> </h2>
     <hr>
   </header>
