--- a/views/partial/head.ejs
+++ b/views/partial/head.ejs
@@ -13,6 +13,7 @@
     <a href="/">Home</a> ||
     <a href="/list">List</a> ||
     <a href="/profile">Profile</a> ||
+    <a href="/order">Order</a> ||
     <a href="/logout">Logout</a>
     <h2><%= header %> </h2>
     <hr>
