--- a/views/showqr.ejs
+++ b/views/showqr.ejs
@@ -1,4 +1,4 @@
-<%- include("partial/head",{header : 'My Profile'}) %>
+<%- include("partial/head",{header : 'Show QR'}) %>
     <img src="<%= url %>" alt="QR" width="300" height="300"><br>
     <button type="button" onclick="window.location.href='/order'">Back</button>
 <%- include("partial/foot") %>
