--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,7 @@
 <%- include("partial/head",{header : 'Hotel Reservation'}) %>
-<h1>Welcome to Movie Application</h1>
+<h1>Welcome to Hotel Reservation</h1>
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae facere reiciendis nobis perferendis
 voluptatum maxime officiis nulla libero, nihil labore cupiditate laudantium molestias facilis repellendus adipisci
-cumque impedit perspiciatis!
+cumque impedit perspiciatis! 
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad nam eligendi nihil necessitatibus aspernatur, labore unde aliquid, maiores iste voluptate, veniam eveniet. Aliquid eaque mollitia fugiat praesentium dignissimos! Tempora, nobis.
 <%- include("partial/foot") %>
